<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codevibe.roadsidehelp_client.RegisterUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoinReg"
            android:layout_width="140dp"
            android:layout_height="100dp"
            tools:srcCompat="@mipmap/ic_launcher_foreground"
            android:scaleX="2"
            android:scaleY="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableRight="@drawable/steering_wheel"
            android:fontFamily="sans-serif"
            android:text="Driver Registration"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="20dp">

        </TextView>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:text="Username"
        android:textColor="@color/li_blue"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/textfieldusername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:autofillHints="username"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:text="Mobile"
        android:textColor="@color/li_blue"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/textfieldmobile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:autofillHints="mobile"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:text="Email"
        android:textColor="@color/li_blue"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/textfieldEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:autofillHints="emailAddress"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:text="Password"
        android:textColor="@color/li_blue"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/textFieldPw"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:passwordToggleEnabled="true"
        android:autofillHints="password"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:text="@string/re_enter_password"
        android:textColor="@color/li_blue"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/textFieldPw2"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:passwordToggleEnabled="true" />

    <TextView
        android:id="@+id/displayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="Error"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="invisible"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/regUserButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/li_blue"
            android:text="@string/register"
            android:textSize="16sp" />

        <Button
            android:id="@+id/gotoSignin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/gray"
            android:text="@string/already_have_a_account_sign_in"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>
</ScrollView>